--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,18 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.75</version>
         </dependency>
-
+        <!-- rabbitMQ 自己的客户端 -->
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.3.0</version>
+        </dependency>
+        <!-- spring 的客户度 -->
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-amqp</artifactId>
+            <version>2.2.12.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
